[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyamldantic"
version = "1.0.0"
authors = [{ "name" = "Stefano Fusai", "email" = "stefanofusai@gmail.com" }]
description = "Validate and serialize YAML config files with Pydantic, with support for environment variables."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/stefanofusai/pyamldantic"
Repository = "https://github.com/stefanofusai/pyamldantic"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
addopts = "--cov --verbose --cov-report=term-missing:skip-covered --durations=10 --numprocesses=auto"
filterwarnings = ["ignore::DeprecationWarning"]
python_files = ["tests/*"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",
    "ARG002",
    "COM812",
    "D100",
    "D104",
    "D203",
    "D213",
    "FIX002",
    "ISC001",
    "S101",
    "TD001",
    "TD002",
    "TD003",
    "TRY003"
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D103"]
