[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyamldantic"
version = "1.0.0"
authors = [{ "name" = "Stefano Fusai", "email" = "stefanofusai@gmail.com" }]
description = "Validate and serialize YAML config files with Pydantic, with support for environment variables."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/stefanofusai/pyamldantic"
Repository = "https://github.com/stefanofusai/pyamldantic"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
addopts = "--cov --verbose --cov-report=term-missing:skip-covered --durations=10 --numprocesses=auto"
filterwarnings = ["ignore::DeprecationWarning"]
python_files = ["tests/*"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Bad rules
    "COM812",
    "D203",
    "D212",
    "E501",
    "FA102",
    "FIX",
    "ISC001",
    "PLR2004",
    "RUF012",
    "S101",
    "S311",
    "TD001",
    "TD002",
    "TD003",
    "TRY003",
    # Project-specific rules
    "D100",
    "D104"
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D103"]
