[project]
name = "pyamldantic"
version = "1.2.0"
description = "Validate and serialize YAML config files with Pydantic, with support for environment variables."
readme = "README.md"
authors = [
    { name = "Stefano Fusai", email = "stefanofusai@gmail.com" }
]
maintainers = [
    { name = "Stefano Fusai", email = "stefanofusai@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic==2.10.3",
    "pyyaml==6.0.2",
]

[project.urls]
Homepage = "https://github.com/stefanofusai/pyamldantic"
Repository = "https://github.com/stefanofusai/pyamldantic"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
development = [
    "pre-commit==4.0.1",
    "ruff==0.8.2",
]
testing = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "pytest-xdist==3.6.1",
]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
addopts = "--cov --verbose --cov-report=term-missing:skip-covered --durations=10 --numprocesses=auto"
filterwarnings = ["ignore::DeprecationWarning"]
python_files = ["tests/*"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Bad rules
    "COM812",
    "D203",
    "D212",
    "E501",
    "FA102",
    "FIX",
    "ISC001",
    "PLR2004",
    "RUF012",
    "S311",
    "TD001",
    "TD002",
    "TD003",
    "TRY003",
    # Project-specific rules
    "D100",
    "D104"
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D103", "S101"]

[tool.uv]
default-groups = []
